<resources>
    <string name="app_name">SSNCE</string>
    <string name="menu_button">Menu button</string>

    <string name="timely_updates">Timely Updates</string>
    <string name="get_notifications_on_bus_alerts_and_feeds_from_departments">Get notifications on bus alerts and feeds from departments</string>
    <string name="find_buses">Find Buses</string>
    <string name="track_your_bus_routes_on_the_go">Look for bus routes on the go!</string>
    <string name="view_results">View Results</string>
    <string name="welcome">Welcome back!</string>
    <string name="manage_your_internals_exam_schedule_and_results_with_ease">Manage your internals, exam schedule and results with ease</string>
    <string name="default_notification_channel_id">default_message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_bus">Track bus</string>
    <string name="bus_routes">Bus routes</string>
    <string name="coming_soon">Coming soon</string>
    <string name="internals">Internals</string>
    <string name="results">Results</string>
    <string name="seating_arrangement">Seating arrangement</string>
    <string name="exam_schedule">Exam\nschedule</string>
    <string name="driver">Driver</string>
    <string name="sign_in_with_you_ssn_mail_id">Sign in using SSN mail id</string>
    <string name="attachments">Attachments</string>
    <string name="comments">Comments</string>
    <string name="year">Year</string>
    <string name="dept">Department</string>
    <string name="title_activity_view_admin">ViewAdminActivity</string>
    <string name="contributors">Contributors</string>
    <string name="pre_final_years">Pre-Final years</string>
    <string name="final_years">Final years</string>
    <string name="alumni">Alumni</string>
    <string name="special_thanks"><u>Special Thanks</u></string>
    <string name="what_s_new">What\'s new</string>
    <string name="helpline_desc">Want to connect with the heads of SSN? explore here</string>
    <string name="additional_contributors">Dhakshinamoorthy D (<b>Bus</b>) | Hari Kishan BJ (<b>Placement</b>) | Amritha Sudharsan (<b>Event</b>) | Shakthi Ganesh (<b>Exam cell</b>) | Sudhakar J | Yadhukrishnan P | Jennifer J | Shibikannan T M</string>
    <string name="fb_page_detail">To know more about app updates, visit</string>
    <string name="app_fb_page"><u>facebook.com/ssnceapp</u></string>
    <string name="app_insta_page"><u>instagram.com/ssnce_app</u></string>
</resources>
