<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkColor"
    android:padding="@dimen/_5sdp"
    android:id="@+id/scroll_view"
    android:scrollbars="none"
    tools:context=".AppInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/appIconCV"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/app_icon" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toRightOf="@+id/appIconCV">

            <RelativeLayout
                android:id="@+id/layout11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/versionTV"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:layout_toRightOf="@+id/titleTV"
                    android:background="@drawable/ic_version_bg"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center"
                    android:text="v1.17"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/webIV"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_web"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/fbIV"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/webIV"
                    android:background="@drawable/ic_fb"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/twitIV"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/fbIV"
                    android:background="@drawable/ic_twit"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/linkedinIV"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/twitIV"
                    android:background="@drawable/ic_linkedin"
                    android:padding="@dimen/_5sdp" />

                <ImageView
                    android:id="@+id/instaIV"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/linkedinIV"
                    android:background="@drawable/ic_insta"
                    android:padding="@dimen/_5sdp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/descTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout11"
                android:fontFamily="@font/open_sans"
                android:text="SSN Institution"
                android:textColor="@color/darkTextColorLight"
                android:textSize="@dimen/_10ssp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text0TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_below="@+id/layout1"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/contributors"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/text1TV"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_below="@+id/text0TV"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/pre_final_years"
            android:textColor="@color/darkTextColor"
            android:textSize="@dimen/_12ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items1RV"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_below="@+id/text1TV" />

        <TextView
            android:id="@+id/text2TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/items1RV"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/final_years"
            android:textColor="@color/darkTextColor"
            android:textSize="@dimen/_12ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items2RV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/text2TV" />

        <TextView
            android:id="@+id/text3TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/items2RV"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/open_sans_bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/alumni"
            android:textColor="@color/darkTextColor"
            android:textSize="@dimen/_12ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items3RV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/text3TV" />

        <TextView
            android:id="@+id/text4TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/items3RV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/special_thanks"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/text5TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text4TV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:textColor="@color/darkTextColorLight"
            android:textSize="@dimen/_10ssp"
            android:text="CSE department &amp; Marketing team"/>

        <TextView
            android:id="@+id/text6TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text5TV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/darkTextColorLight"
            android:textSize="@dimen/_10ssp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/additional_contributors"/>

        <TextView
            android:id="@+id/text7TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text6TV"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/darkTextColor"
            android:textSize="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/fb_page_detail"/>

        <TextView
            android:id="@+id/textfbUrlTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text7TV"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_fb_page"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/textinstaUrlTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textfbUrlTV"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_insta_page"
            android:textColor="@color/colorAccentDark"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

</ScrollView>