<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".fragments.ExamCellFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="2"
		android:layout_marginTop="6dp"
		android:orientation="horizontal">
		<android.support.v7.widget.CardView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_weight="1"
			app:cardCornerRadius="10dp"
			app:cardElevation="0dp"
			android:layout_marginLeft="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginRight="8dp"
			android:layout_marginEnd="8dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:background="@color/colorAccentAlpha"
				android:orientation="vertical">
				<ImageView
					android:layout_width="35dp"
					android:layout_height="35dp"
					android:tint="@color/colorAccent"
					android:layout_marginBottom="40dp"
					android:src="@drawable/ic_internals" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="22sp"
					android:textStyle="bold"
					android:textColor="@color/colorAccent"
					android:text="@string/internals"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>
		<android.support.v7.widget.CardView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_weight="1"
			app:cardCornerRadius="10dp"
			app:cardElevation="0dp"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginRight="16dp"
			android:layout_marginEnd="16dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:background="@color/colorAccentAlpha"
				android:orientation="vertical">
				<ImageView
					android:layout_width="35dp"
					android:layout_height="35dp"
					android:tint="@color/colorAccent"
					android:layout_marginBottom="40dp"
					android:src="@drawable/ic_exam" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="22sp"
					android:textStyle="bold"
					android:textColor="@color/colorAccent"
					android:text="@string/results"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="2"
		android:orientation="horizontal">
		<android.support.v7.widget.CardView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_weight="1"
			app:cardCornerRadius="10dp"
			app:cardElevation="0dp"
			android:layout_marginLeft="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginRight="8dp"
			android:layout_marginEnd="8dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:background="@color/colorAccentAlpha"
				android:orientation="vertical">
				<ImageView
					android:layout_width="35dp"
					android:layout_height="35dp"
					android:tint="@color/colorAccent"
					android:layout_marginBottom="40dp"
					android:src="@drawable/ic_seating" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="22sp"
					android:textStyle="bold"
					android:singleLine="true"
					android:ellipsize="marquee"
					android:textColor="@color/colorAccent"
					android:text="@string/seating_arrangement"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>
		<android.support.v7.widget.CardView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_weight="1"
			app:cardCornerRadius="10dp"
			app:cardElevation="0dp"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginRight="16dp"
			android:layout_marginEnd="16dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp"
				android:background="@color/colorAccentAlpha"
				android:orientation="vertical">
				<ImageView
					android:layout_width="35dp"
					android:layout_height="35dp"
					android:tint="@color/colorAccent"
					android:layout_marginBottom="40dp"
					android:src="@drawable/ic_calendar" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="22sp"
					android:singleLine="true"
					android:ellipsize="marquee"
					android:textStyle="bold"
					android:textColor="@color/colorAccent"
					android:text="@string/exam_schedule"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

	</LinearLayout>


</LinearLayout>